fix: increase z-index of custom select

--- a/client/src/components/CustomSelect/CustomSelect.module.css
+++ b/client/src/components/CustomSelect/CustomSelect.module.css
@@ -24,7 +24,7 @@
   border: none;
   border-radius: 10px;
   background-color: var(--color-yellow);
-  z-index: 1;
+  z-index: 2;
 }
 
 .option {
